--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
